# open-model-finetuning-lab

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/evaluation/: basic_eval.yaml
configs/serving/: local_assistant.yaml
configs/training/: lora.yaml  qlora.yaml  sft.yaml  sft_lora_qlora.yaml
data/eval/: sample_eval_set.jsonl
data/sample/: domain_assistant_examples.jsonl  domain_assistant_train.jsonl  domain_assistant_validation.jsonl
docs/01_foundation/: 01_tokenization.md  02_embeddings.md  03_transformer_basics.md  04_causal_masking.md  05_decoder_only_models.md  06_next_token_prediction.md  07_training_vs_inference.md  (+2 more)
examples/: _hf_demo_utils.py  attention_demo.py  batching_demo.py  causal_mask_demo.py  chat_template_demo.py  context_window_demo.py  dataset_formatting_demo.py  decoder_only_demo.py  embeddings_demo.py  eval_dataset_demo.py  eval_demo.py  eval_metrics_demo.py  generation_controls_demo.py  generation_demo.py  hf_loading_demo.py  next_token_demo.py  prompting_demo.py  qualitative_review_demo.py  serving_api_demo.py  serving_backend_demo.py  tokenizer_demo.py  tokenizer_usage_demo.py  train_validation_split_demo.py  training_plan_demo.py
scripts/: check_repo.py  evaluate_model.py  generate_seed_data.py  prepare_dataset.py  preview_sample_data.py  run_inference.py  run_lora.py  run_sft.py  serve_model.py
tests/: test_phase1_materials.py  test_phase2_materials.py  test_phase3_materials.py  test_phase4_materials.py  test_phase5_materials.py  test_phase6_materials.py  test_serving.py  test_smoke.py
(+68 files in other folders)
